--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>숫자 맞추기 게임!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h1>숫자 맞추기 게임!</h1>
-    <div id="result-area">결과가 나온다</div>
-    <input type="number" id="user-input"/>
-    <button id="play-button">Go!</button>
+    <div class="container">
+        <h1>숫자 맞추기 게임!</h1>
+        <div id="result-area" class="result-area">결과가 나온다</div>
+        <div id="chance-area" class="chance-area">남은 찬스: 5</div>
+        <input type="number" id="user-input" class="user-input" placeholder="숫자를 입력하세요"/>
+        <div class="button-container">
+            <button id="play-button" class="play-button">Go!</button>
+            <button id="reset-button" class="reset-button">리셋!</button>
+        </div>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
